# blinn

./: .gitignore  CMakeLists.txt  Makefile  README.md  color.cpp  color.h  dbg.h  geometry.cpp  geometry.h  main  main.cpp  point.cpp  point.h  ray.cpp  ray.h  render.cpp  render.h  sphere.cpp  sphere.h  square.h  system.cpp  test  test.bak  test.cpp  tracer.cpp  tracer.h
include/ProgressBar/: ProgressBar.hpp
src/: .exrc  Computation.cu  Computation.cuh  Makefile  blobsys.cpp  blobsys.h  color.cpp  color.cu  color.cuh  color.h  config.cpp  config.h  config.txt  geometry.h  main.cpp  main.cu  managed.h  point.cpp  point.h  ray.cpp  ray.h  render.cpp  render.h  scene.h  sphere.cpp  sphere.h  square.cpp  square.h  system.h  test.cpp  tracer.cpp  tracer.cu  tracer.h
src/basics/: color.cpp  color.h  point.cpp  ray.cpp  square.cpp
src/physics/: blobsys.cpp  blobsys.h
src/png++-0.2.9/example/: pixel_generator.dep
src/png++-0.2.9/test/: convert_color_space  generate_gray_packed  generate_gray_packed.dep
src/png++/example/: pixel_generator
src/png++/test/: convert_color_space.dep  dump  dump.dep  generate_palette  generate_palette.dep  read_write_gray_packed  read_write_gray_packed.dep  read_write_param  read_write_param.dep  write_gray_16  write_gray_16.dep
src/renderables/: sphere.cpp  sphere.h
src/rendersys/: render.cpp  render.h  scene.cpp  scene.h  tracer.cpp  tracer.h
src/utils/: config.cpp  config.h
